Setting up initial data structures.

--- a/src/meson.build
+++ b/src/meson.build
@@ -1,4 +1,12 @@
 sources += files(
+    'ActionCondition.vala',
+    'ActionConditions.vala',
     'Application.vala',
+    'DirAction.vala',
+    'DirActions.vala',
+    'FileAction.vala',
     'MainWindow.vala'
 )
+
+subdir('actions')
+subdir('conditions')
