Cleaning up compile errors.

--- a/src/meson.build
+++ b/src/meson.build
@@ -2,13 +2,13 @@ sources += files(
     'ActionCondition.vala',
     'ActionConditions.vala',
     'Application.vala',
+    'DateCondition.vala',
     'DirAction.vala',
     'DirActions.vala',
     'DirList.vala',
     'FileAction.vala',
     'FileActions.vala',
-    'MainWindow.vala'
+    'MainWindow.vala',
+    'TextCondition.vala'
 )
 
-subdir('actions')
-subdir('conditions')
