Adding directory UI and data controller.

--- a/src/meson.build
+++ b/src/meson.build
@@ -2,6 +2,7 @@ sources += files(
     'ActionCondition.vala',
     'ActionConditions.vala',
     'Application.vala',
+    'Controller.vala',
     'DateCondition.vala',
     'DirAction.vala',
     'DirActions.vala',
