--- a/src/widgets/meson.build
+++ b/src/widgets/meson.build
@@ -1,4 +1,7 @@
 sources += files(
+    'ActionBoxList.vala',
+    'BoxList.vala',
+    'CondBoxList.vala',
     'DirectoryList.vala',
     'EnableList.vala',
     'RuleForm.vala',
