Additional widget updates.

--- a/src/widgets/meson.build
+++ b/src/widgets/meson.build
@@ -1,7 +1,14 @@
 sources += files(
     'ActionBoxList.vala',
+    'ActionFileBox.vala',
+    'ActionInterface.vala',
+    'ActionRenameBox.vala',
     'BoxList.vala',
     'CondBoxList.vala',
+    'CondDateBox.vala',
+    'CondInterface.vala',
+    'CondMimeBox.vala',
+    'CondTextBox.vala',
     'DirectoryList.vala',
     'EnableList.vala',
     'RuleForm.vala',
