--- a/src/widgets/menubuttons/meson.build
+++ b/src/widgets/menubuttons/meson.build
@@ -3,6 +3,7 @@ sources += files(
     'CondOptMenu.vala',
     'DateOptMenu.vala',
     'MatchOptMenu.vala',
+    'MimeOptMenu.vala',
     'OptMenu.vala',
     'TextOptMenu.vala',
     'TimeOptMenu.vala'
