Completing Rename action UI and checkpointing rule save.

--- a/src/widgets/conditions/meson.build
+++ b/src/widgets/conditions/meson.build
@@ -1,6 +1,6 @@
 sources += files(
+    'CondBase.vala',
     'CondDateBox.vala',
-    'CondInterface.vala',
     'CondMimeBox.vala',
     'CondTextBox.vala'
 )
