--- a/data/com.github.phase1geo.actioneer.appdata.xml.in
+++ b/data/com.github.phase1geo.actioneer.appdata.xml.in
@@ -67,5 +67,8 @@
     <content_attribute id="money-gambling">none</content_attribute>
   </content_rating>
   <releases>
+    <release version="1.0.0" date="2022-01-14">
+      <p>Initial release.</p>
+    </release>
   </releases>
 </component>
