Features and improvements
* Added file size condition
* Added trash and notification actions
* UI cleanup
* Code cleanup

--- a/src/meson.build
+++ b/src/meson.build
@@ -10,6 +10,7 @@ sources += files(
     'FileAction.vala',
     'FileActions.vala',
     'MainWindow.vala',
+    'SizeCondition.vala',
     'TextCondition.vala',
     'TokenText.vala',
     'Utils.vala'
