--- a/src/widgets/conditions/meson.build
+++ b/src/widgets/conditions/meson.build
@@ -2,5 +2,6 @@ sources += files(
     'CondBase.vala',
     'CondDateBox.vala',
     'CondMimeBox.vala',
+    'CondSizeBox.vala',
     'CondTextBox.vala'
 )
