--- a/src/widgets/menubuttons/meson.build
+++ b/src/widgets/menubuttons/meson.build
@@ -2,8 +2,10 @@ sources += files(
     'ActionOptMenu.vala',
     'CondOptMenu.vala',
     'DateOptMenu.vala',
+    'IntOptMenu.vala',
     'MatchOptMenu.vala',
     'OptMenu.vala',
+    'SizeOptMenu.vala',
     'TextOptMenu.vala',
     'TimeOptMenu.vala'
 )
