Adding support for running external script action

--- a/src/widgets/actions/meson.build
+++ b/src/widgets/actions/meson.build
@@ -2,5 +2,6 @@ sources += files(
     'ActionBase.vala',
     'ActionEmptyBox.vala',
     'ActionFileBox.vala',
-    'ActionRenameBox.vala'
+    'ActionRenameBox.vala',
+    'ActionTextBox.vala'
 )
