Adding test result output

--- a/src/meson.build
+++ b/src/meson.build
@@ -11,6 +11,7 @@ sources += files(
     'FileActions.vala',
     'MainWindow.vala',
     'SizeCondition.vala',
+    'TestResult.vala',
     'TextCondition.vala',
     'TokenText.vala',
     'Utils.vala'
