Adding support for file attributes
* Tags
* Ratings
* Comment

--- a/src/meson.build
+++ b/src/meson.build
@@ -11,6 +11,8 @@ sources += files(
     'FileActions.vala',
     'MainWindow.vala',
     'SizeCondition.vala',
+    'StarCondition.vala',
+    'TagsCondition.vala',
     'TestResult.vala',
     'TextCondition.vala',
     'TokenText.vala',
