--- a/src/widgets/actions/meson.build
+++ b/src/widgets/actions/meson.build
@@ -3,5 +3,6 @@ sources += files(
     'ActionEmptyBox.vala',
     'ActionFileBox.vala',
     'ActionRenameBox.vala',
+    'ActionStarBox.vala',
     'ActionTextBox.vala'
 )
