--- a/src/widgets/conditions/meson.build
+++ b/src/widgets/conditions/meson.build
@@ -3,5 +3,7 @@ sources += files(
     'CondDateBox.vala',
     'CondMimeBox.vala',
     'CondSizeBox.vala',
+    'CondStarBox.vala',
+    'CondTagsBox.vala',
     'CondTextBox.vala'
 )
