* Adding support for compression/decompression file actions

--- a/src/meson.build
+++ b/src/meson.build
@@ -9,6 +9,7 @@ sources += files(
     'DirList.vala',
     'FileAction.vala',
     'FileActions.vala',
+    'FileCompress.vala',
     'MainWindow.vala',
     'SizeCondition.vala',
     'StarCondition.vala',
