--- a/src/widgets/actions/meson.build
+++ b/src/widgets/actions/meson.build
@@ -1,5 +1,6 @@
 sources += files(
     'ActionBase.vala',
+    'ActionCompressBox.vala',
     'ActionEmptyBox.vala',
     'ActionFileBox.vala',
     'ActionRenameBox.vala',
