Adding support for image width and height conditions

--- a/src/meson.build
+++ b/src/meson.build
@@ -10,9 +10,9 @@ sources += files(
     'FileAction.vala',
     'FileActions.vala',
     'FileCompress.vala',
+    'IntCondition.vala',
     'MainWindow.vala',
     'SizeCondition.vala',
-    'StarCondition.vala',
     'TagsCondition.vala',
     'TestResult.vala',
     'TextCondition.vala',
