Checkpointing work on condition groups.

--- a/src/widgets/conditions/meson.build
+++ b/src/widgets/conditions/meson.build
@@ -1,6 +1,7 @@
 sources += files(
     'CondBase.vala',
     'CondDateBox.vala',
+    'CondGroupBox.vala',
     'CondIntBox.vala',
     'CondMimeBox.vala',
     'CondSizeBox.vala',
