Adding code support for image resizing and converting (no UI support).

--- a/src/meson.build
+++ b/src/meson.build
@@ -10,6 +10,7 @@ sources += files(
     'FileAction.vala',
     'FileActions.vala',
     'FileCompress.vala',
+    'Imager.vala',
     'IntCondition.vala',
     'MainWindow.vala',
     'SizeCondition.vala',
