Initial addition of image resize and convert actions

--- a/src/widgets/actions/meson.build
+++ b/src/widgets/actions/meson.build
@@ -1,9 +1,11 @@
 sources += files(
     'ActionBase.vala',
     'ActionCompressBox.vala',
+    'ActionConvertBox.vala',
     'ActionEmptyBox.vala',
     'ActionFileBox.vala',
     'ActionRenameBox.vala',
+    'ActionResizeBox.vala',
     'ActionStarBox.vala',
     'ActionTextBox.vala'
 )
