--- a/src/widgets/menubuttons/meson.build
+++ b/src/widgets/menubuttons/meson.build
@@ -3,10 +3,12 @@ sources += files(
     'CompFormatOptMenu.vala',
     'CompLevelOptMenu.vala',
     'CondOptMenu.vala',
+    'ConvertOptMenu.vala',
     'DateOptMenu.vala',
     'IntOptMenu.vala',
     'MatchOptMenu.vala',
     'OptMenu.vala',
+    'ResizeOptMenu.vala',
     'SizeOptMenu.vala',
     'StarOptMenu.vala',
     'TagsOptMenu.vala',
