Adding pinned list UI.
* Rearranging main UI to improve header bar layout.

--- a/src/widgets/meson.build
+++ b/src/widgets/meson.build
@@ -4,6 +4,7 @@ sources += files(
     'CondBoxList.vala',
     'DirectoryList.vala',
     'EnableList.vala',
+    'PinList.vala',
     'RuleForm.vala',
     'RuleList.vala',
     'RuleStack.vala'
