Initial checkin of file kind condition.

--- a/src/meson.build
+++ b/src/meson.build
@@ -12,6 +12,7 @@ sources += files(
     'FileCompress.vala',
     'Imager.vala',
     'IntCondition.vala',
+    'KindCondition.vala',
     'MainWindow.vala',
     'SizeCondition.vala',
     'TagsCondition.vala',
