--- a/src/widgets/conditions/meson.build
+++ b/src/widgets/conditions/meson.build
@@ -3,6 +3,7 @@ sources += files(
     'CondDateBox.vala',
     'CondGroupBox.vala',
     'CondIntBox.vala',
+    'CondKindBox.vala',
     'CondMimeBox.vala',
     'CondSizeBox.vala',
     'CondStarBox.vala',
