Adding action to open a file

--- a/src/widgets/actions/meson.build
+++ b/src/widgets/actions/meson.build
@@ -4,6 +4,7 @@ sources += files(
     'ActionConvertBox.vala',
     'ActionEmptyBox.vala',
     'ActionFileBox.vala',
+    'ActionOpenBox.vala',
     'ActionRenameBox.vala',
     'ActionResizeBox.vala',
     'ActionStarBox.vala',
