--- a/src/widgets/menubuttons/meson.build
+++ b/src/widgets/menubuttons/meson.build
@@ -9,6 +9,7 @@ sources += files(
     'KindOptMenu.vala',
     'KindMatchOptMenu.vala',
     'MatchOptMenu.vala',
+    'OpenOptMenu.vala',
     'OptMenu.vala',
     'ResizeOptMenu.vala',
     'SizeOptMenu.vala',
