Adding server add/edit UI

--- a/src/widgets/menubuttons/meson.build
+++ b/src/widgets/menubuttons/meson.build
@@ -12,6 +12,7 @@ sources += files(
     'OpenOptMenu.vala',
     'OptMenu.vala',
     'ResizeOptMenu.vala',
+    'ServerConnOptMenu.vala',
     'SizeOptMenu.vala',
     'StarOptMenu.vala',
     'TagsOptMenu.vala',
