Adding support for uploading to a server (testing in progress)

--- a/src/widgets/actions/meson.build
+++ b/src/widgets/actions/meson.build
@@ -8,5 +8,6 @@ sources += files(
     'ActionRenameBox.vala',
     'ActionResizeBox.vala',
     'ActionStarBox.vala',
-    'ActionTextBox.vala'
+    'ActionTextBox.vala',
+    'ActionUploadBox.vala'
 )
