--- a/src/widgets/meson.build
+++ b/src/widgets/meson.build
@@ -3,6 +3,7 @@ sources += files(
     'BoxList.vala',
     'CondBoxList.vala',
     'DirectoryList.vala',
+    'EditServer.vala',
     'EnableList.vala',
     'PinList.vala',
     'RuleForm.vala',
