Integrating entry search capability

--- a/src/meson.build
+++ b/src/meson.build
@@ -16,6 +16,7 @@ sources += files(
     'KindCondition.vala',
     'MainWindow.vala',
     'SearchCriteria.vala',
+    'SearchHistory.vala',
     'Server.vala',
     'Servers.vala',
     'SizeCondition.vala',
