--- a/src/widgets/actions/meson.build
+++ b/src/widgets/actions/meson.build
@@ -8,6 +8,7 @@ sources += files(
     'ActionRenameBox.vala',
     'ActionResizeBox.vala',
     'ActionStarBox.vala',
+    'ActionSubfolderBox.vala',
     'ActionTextBox.vala',
     'ActionUploadBox.vala'
 )
