--- a/data/com.github.phase1geo.actioneer.appdata.xml.in
+++ b/data/com.github.phase1geo.actioneer.appdata.xml.in
@@ -30,6 +30,7 @@
     </screenshot>-->
   </screenshots>
   <developer_name>Trevor Williams</developer_name>
+  <developer>com.github.phase1geo</developer>
   <url type="homepage">https://github.com/phase1geo/actioneer/</url>
   <url type="bugtracker">https://github.com/phase1geo/actioneer/issues/</url>
   <custom>
