Fixing application icon installation

--- a/data/meson.build
+++ b/data/meson.build
@@ -1,11 +1,7 @@
-icon_sizes = ['16','24','32', '48', '64', '128']
-
-foreach i : icon_sizes
-    install_data(
-        join_paths('icons', i, meson.project_name() + '.svg'),
-        install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', i + 'x' + i, 'apps')
-    )
-endforeach
+install_data(
+    join_paths('icons', 'scalable', meson.project_name() + '.svg'),
+    install_dir: join_paths(get_option('datadir'), 'icons', 'hicolor', 'scalable', 'apps')
+)
 
 i18n.merge_file(
     input: meson.project_name() + '.desktop.in',
